--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 
-.h3{
+.h3 {
     font-size: 24px;
     font-weight: 700;
     margin-bottom: 10px;
     color: #fff;
 }
 
-body{
+body {
     font-family: roboto;
     /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
 }
@@ -24,9 +24,10 @@ body{
     transition: background-color 0.3s ease-in-out;
 }
 
-.navbar .navbar-brand{
+.navbar .navbar-brand {
     color: #fff;
 }
+
 .navbar .nav-link {
     color: #fff;
     font-size: 16px;
@@ -42,9 +43,11 @@ body{
 }
 
 .navbar .nav-link.active {
-    color: #f00; 
+    color: #f00;
     font-weight: 500;
 }
+
+
 
 
 
@@ -56,14 +59,15 @@ body{
     align-items: center;
     /* flex-direction: column; */
 }
-.hero-left h2{
-  color: #fff;
-  font-size: 68px;
-  font-weight: 600;
-  margin-bottom: 20px;
+
+.hero-left h2 {
+    color: #fff;
+    font-size: 68px;
+    font-weight: 600;
+    margin-bottom: 20px;
 }
 
-.hero-left .hero-btn{
+.hero-left .hero-btn {
     display: flex;
     width: 100%;
     justify-content: center;
@@ -96,35 +100,39 @@ body{
     content: "";
     position: absolute;
     inset: 0;
-    background: 
-        linear-gradient(
-            to right, 
-            rgba(0, 0, 0, 1) 0%,  /* Left side fully black */
-            rgba(0, 0, 0, 0.7) 10%,  
-            rgba(0, 0, 0, 0.3) 20%, 
-            rgba(0, 0, 0, 0) 50%,  
-            rgba(0, 0, 0, 0.3) 80%, 
+    background:
+        linear-gradient(to right,
+            rgba(0, 0, 0, 1) 0%,
+            /* Left side fully black */
+            rgba(0, 0, 0, 0.7) 10%,
+            rgba(0, 0, 0, 0.3) 20%,
+            rgba(0, 0, 0, 0) 50%,
+            rgba(0, 0, 0, 0.3) 80%,
             rgba(0, 0, 0, 0.7) 90%,
-            rgba(0, 0, 0, 1) 100%  /* Right side fully black */
+            rgba(0, 0, 0, 1) 100%
+            /* Right side fully black */
         ),
-        linear-gradient(
-            to bottom, 
-            rgba(0, 0, 0, 1) 0%,  /* Top fully black */
-            rgba(0, 0, 0, 0.7) 10%,  
-            rgba(0, 0, 0, 0) 50%, 
-            rgba(0, 0, 0, 0.7) 90%,  
-            rgba(0, 0, 0, 1) 100%  /* Bottom fully black */
+        linear-gradient(to bottom,
+            rgba(0, 0, 0, 1) 0%,
+            /* Top fully black */
+            rgba(0, 0, 0, 0.7) 10%,
+            rgba(0, 0, 0, 0) 50%,
+            rgba(0, 0, 0, 0.7) 90%,
+            rgba(0, 0, 0, 1) 100%
+            /* Bottom fully black */
         );
     z-index: 1;
     pointer-events: none;
-    box-shadow: inset 0 0 50px rgba(0, 0, 0, 1); /* Dark corners */
+    box-shadow: inset 0 0 50px rgba(0, 0, 0, 1);
+    /* Dark corners */
 }
 
 .banner-right::after {
     content: "";
     position: absolute;
     inset: 0;
-    background: rgba(0, 0, 0, 0.8); /* Full dark overlay */
+    background: rgba(0, 0, 0, 0.8);
+    /* Full dark overlay */
     mask-image: radial-gradient(circle, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 1) 90%);
     -webkit-mask-image: radial-gradient(circle, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 1) 90%);
     z-index: 2;
@@ -133,12 +141,12 @@ body{
 
 
 /* broadcard */
-#broadcard i{
+#broadcard i {
     color: yellow;
     font-size: 40px;
 }
 
-#broadcard h2{
+#broadcard h2 {
     font-size: 36px;
     font-weight: 700;
     margin-bottom: 20px;
@@ -146,12 +154,44 @@ body{
     margin-top: 40px;
 }
 
-#broadcard h3{
+#broadcard h3 {
     font-size: 24px;
     font-weight: 700;
     margin-bottom: 10px;
 }
 
+
+.broadcard-box{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+}
+.broadcard-left{
+    width: 20%;
+}
+
+.broadcard-right{
+    width: 70%; 
+    /* background-color: red !important; */
+}
+
+.broadcard-right h4{
+    color: #fff !important;
+    font-size: 20px;
+    font-size: 16px;
+}
+
+.broadcard-right p{
+    color: #fff !important;
+    font-size: 16px;
+    font-size: 14px;
+}
 .broadcard-item {
     display: flex;
     flex-direction: column;
@@ -159,7 +199,7 @@ body{
     /* align-items: center; */
 }
 
-.broadcard-item .bottom{
+.broadcard-item .bottom {
     color: red;
 }
 
@@ -167,21 +207,22 @@ body{
     width: 50%;
 
 }
-#broadcard small{
-    
+
+#broadcard small {
+
     color: #fff;
     font-size: 16px;
 }
 
-#broadcard .icon{
+#broadcard .icon {
     width: 10%;
 }
 
-.broadcard-item .bottom{
+.broadcard-item .bottom {
     font-size: 12px !important;
     /* color: red; */
     margin-top: 6px;
-    
+
 }
 
 /* #brodcard .broadcard-item small{
@@ -196,7 +237,7 @@ body{
     background-color: #f00;
 } */
 
-#brodcard .broadcard-text small{
+#brodcard .broadcard-text small {
     /* display: flex;
     justify-content: space-between;
     flex-direction: column; */
@@ -209,24 +250,28 @@ body{
 /* Membership Section */
 
 .membership-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center;
+    flex-direction: column; */
     margin-top: 50px;
-    /* background-color: #171616; */
-    background-color: transparent;
+    background-color: #211f1f !important;
+   /* background-color: red !important; */
+    /* background-color: transparent; */
     cursor: pointer;
     border-radius: 10px;
     height: 300px;
     /* padding: 10px; */
 }
 
-.membership-box:hover{
+.membership-box:hover {
     border: 2px solid #fff;
 }
 
-.membership-box .membership-head{
+.membership-box .membership-head {
+    text-align: center;
+    padding: 20px 0;
+    border-bottom: 0.5px solid gray;
     color: #fff;
 }
 
@@ -237,7 +282,7 @@ body{
     color: #fff;
 }
 
-.membership-box i{
+.membership-box i {
     border: 2px solid #fff;
     width: 20px;
     height: 20px;
@@ -248,7 +293,7 @@ body{
 }
 
 
-.membership-btn{
+.membership-btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -259,11 +304,11 @@ body{
     outline: none;
     padding: 4px 20px;
     cursor: pointer;
-} 
+}
 
 
 /* About Section  */
-.about-left p{
+.about-left p {
     color: white;
 }
 
@@ -271,7 +316,8 @@ body{
 .slider {
     position: relative;
     width: 100%;
-    max-width: 600px; /* Adjust as needed */
+    max-width: 600px;
+    /* Adjust as needed */
     margin: auto;
     overflow: hidden;
     border-radius: 10px;
@@ -296,12 +342,18 @@ body{
 
 /* Fade Animation */
 @keyframes fade {
-    from { opacity: 0.5; }
-    to { opacity: 1; }
+    from {
+        opacity: 0.5;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 /* Navigation Buttons */
-.prev, .next {
+.prev,
+.next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -314,64 +366,72 @@ body{
     border-radius: 5px;
 }
 
-.prev { left: 10px; }
-.next { right: 10px; }
+.prev {
+    left: 10px;
+}
 
-.prev:hover, .next:hover {
+.next {
+    right: 10px;
+}
+
+.prev:hover,
+.next:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
 .about-right .slider img {
-   height: 400px;
- 
+    height: 400px;
+
 }
 
 
 
 /* Membership section  */
 
-.membership-box {
-}
+.membership-box {}
 
 
 .membership-box .text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
-.membership-box .text i{
+.membership-box .text i {
     /* width:20%; */
 }
 
 /* trainer  Section */
 
-.trainer-box{
+.trainer-box {
     border: 2px solid #fff;
     border-radius: 10px;
     padding: 10px;
     margin-top: 20px;
 }
-.trainer-box img{
+
+.trainer-box img {
     width: 100%;
     height: 200px;
     border-radius: 10px;
 }
 
-.trainer-box h4{
+.trainer-box h4 {
     color: #fff;
     text-align: center;
     font-size: 20px;
     margin-top: 10px;
 }
+
 .trainer-social {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
 }
-.trainer-social span{
+
+.trainer-social span {
     border: 2px solid #fff;
     width: 30px;
     height: 30px;
@@ -384,7 +444,7 @@ body{
     cursor: pointer;
 }
 
-.trainer-social span:hover{
+.trainer-social span:hover {
     color: #dc4535;
     border: 2px solid #dc4535;
     /* color: #000; */
@@ -401,7 +461,7 @@ body{
 }
 
 
-.footer-social span{
+.footer-social span {
     border: 2px solid #fff;
     width: 30px;
     height: 30px;
@@ -414,3 +474,17 @@ body{
     cursor: pointer;
 }
 
+
+
+/* #footer  */
+#footer .logo {
+    color: #fff;
+    font-size: 40px;
+}
+
+#footer p,
+address {
+    color: #fff;
+    font-size: 16px;
+    margin-top: 20px;
+}
