--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,79 @@ body {
 
 .navbar .navbar-brand {
     color: #fff;
+    font-size: 50px;
+}
+.navbar .navbar-brand span{
+    color: yellow;
 }
 
+.nv-btn {
+    background-color: yellow;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 20px;
+    /* color: #fff; */
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nv-btn i{
+    margin-left: 5px;
+}
+
+
+/* Model  */
+
+
+/* Modal Background */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 30%;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Close Button */
+.close {
+    float: left;
+    font-size: 25px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+
+/* Form Styling */
+form input, form button {
+    width: 100%;
+    margin: 10px 0;
+    padding: 8px;
+    font-size: 16px;
+}
+
+.modal-content button{
+    background-color: yellow;
+    border: none;
+}
+
+
+/* Model End  */
 .navbar .nav-link {
     color: #fff;
     font-size: 16px;
@@ -141,24 +212,27 @@ body {
 
 
 /* broadcard */
+#broadcard{
+    margin-top: 80px;
+}
 #broadcard i {
     color: yellow;
     font-size: 40px;
 }
 
-#broadcard h2 {
-    font-size: 36px;
+#broadcard h3 {
+    color: white;
+    font-size: 60px;
     font-weight: 700;
-    margin-bottom: 20px;
-    color: #fff;
-    margin-top: 40px;
+    margin-bottom: 10px;
+    text-align: left;
 }
 
-#broadcard h3 {
+/* #broadcard h3 {
     font-size: 24px;
     font-weight: 700;
     margin-bottom: 10px;
-}
+} */
 
 
 .broadcard-box{
@@ -220,27 +294,9 @@ body {
 
 .broadcard-item .bottom {
     font-size: 12px !important;
-    /* color: red; */
     margin-top: 6px;
-
 }
-
-/* #brodcard .broadcard-item small{
-    background-color: #000;
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 20px;
-    transition: background-color 0.3s ease-in-out;
-} */
-/* 
-#broadcard .broadcard-item:hover{
-    background-color: #f00;
-} */
-
 #brodcard .broadcard-text small {
-    /* display: flex;
-    justify-content: space-between;
-    flex-direction: column; */
     display: block;
     color: yellow;
 }
@@ -250,10 +306,13 @@ body {
 /* Membership Section */
 
 .membership-box {
-    /* display: flex; */
+    width: 80%;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
     /* justify-content: center; */
-    /* align-items: center;
-    flex-direction: column; */
+    /* align-items: center; */
+    flex-direction: column;
     margin-top: 50px;
     background-color: #211f1f !important;
    /* background-color: red !important; */
@@ -265,7 +324,7 @@ body {
 }
 
 .membership-box:hover {
-    border: 2px solid #fff;
+    /* border: 2px solid #fff; */
 }
 
 .membership-box .membership-head {
@@ -275,8 +334,21 @@ body {
     color: #fff;
 }
 
-.membership-box span {
-    display: flex;
+.membership-text{
+    margin-top: 20px;
+}
+.membership-text .left {
+  width: 20%;
+
+  display: flex;
+  justify-content: center;
+}
+
+.membership-text .right {
+    width: 80%;
+}
+
+ .membership-box span {
     font-size: 14px;
     align-items: center;
     color: #fff;
@@ -294,22 +366,37 @@ body {
 
 
 .membership-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 30px;
     margin-top: 20px;
     background-color: yellow;
-    /* border-radius: 10px; */
     border: none;
     outline: none;
     padding: 4px 20px;
     cursor: pointer;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    height: 40px;
 }
 
 
 /* About Section  */
+
+#about{
+    margin-top: 80px;
+}
 .about-left p {
     color: white;
+    font-size: 16px;
+}
+
+.about-left h3{
+    color: white;
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
 
 
@@ -334,13 +421,11 @@ body {
     display: none;
 }
 
-/* Show only active slide */
 .slide.active {
     display: block;
     animation: fade 0.5s ease-in-out;
 }
 
-/* Fade Animation */
 @keyframes fade {
     from {
         opacity: 0.5;
@@ -351,7 +436,6 @@ body {
     }
 }
 
-/* Navigation Buttons */
 .prev,
 .next {
     position: absolute;
@@ -387,6 +471,18 @@ body {
 
 
 /* Membership section  */
+#membership{
+    margin-top: 80px;
+}
+
+#membership h3 {
+    color: white;
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 
 .membership-box {}
 
@@ -402,8 +498,45 @@ body {
     /* width:20%; */
 }
 
-/* trainer  Section */
 
+/* Gallery Section  */
+
+#gallery{
+    margin-top: 80px;
+}
+
+#gallery h3 {
+    color: white;
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.gallery-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.gallery-box img{
+    width: 100%;
+    height: 400px;
+}
+
+/* trainer  Section */
+#trainer{
+    margin-top: 80px;
+}
+
+#trainer h3 {
+    color: white;
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-align: center;
+}
 .trainer-box {
     border: 2px solid #fff;
     border-radius: 10px;
@@ -474,6 +607,9 @@ body {
     cursor: pointer;
 }
 
+#footer{
+    margin-top: 80px;
+}
 
 
 /* #footer  */
