form design mobile section 100

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 /* Modal Content */
-.modal-content {
+#appointmentModal .modal-content {
     background-color: #fff;
     margin: 5% auto;
     padding: 20px;
