--- a/css/media.css
+++ b/css/media.css
@@ -14,4 +14,13 @@
     #broadcard h2 {
         margin-top: 100px;
     }
+
+    #appointmentModal .modal-content {
+        background-color: #fff;
+        margin: 5% auto;
+        padding: 20px;
+        border-radius: 10px;
+        width: 100%;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    }
 }
