--- a/css/media.css
+++ b/css/media.css
@@ -3,7 +3,7 @@
         z-index: 99999;
         padding: 10px;
         border-radius: 10px;
-        margin-top: 20px;
+        margin-top: 10px;
         background-color: #fff;
     }
 
@@ -15,12 +15,17 @@
         margin-top: 100px;
     }
 
-    #appointmentModal .modal-content {
+    #appointmentModal .modal-content { 
         background-color: #fff;
         margin: 5% auto;
         padding: 20px;
         border-radius: 10px;
-        width: 100%;
+        width: 90% !important;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     }
+
+    #appointmentModal {
+        z-index: 999999999; /* Extra high z-index */
+    }
+    
 }
