--- a/css/media.css
+++ b/css/media.css
@@ -25,7 +25,7 @@
     }
 
     #appointmentModal {
-        z-index: 999999999; /* Extra high z-index */
+        z-index: 999999999; 
     }
     
 }
