--- a/css/style.css
+++ b/css/style.css
@@ -624,3 +624,39 @@ address {
     font-size: 16px;
     margin-top: 20px;
 }
+
+
+#footer a{
+    color: #fff;
+    font-size: 16px;
+    margin-top: 20px;
+    text-decoration: none;
+}
+
+
+.whatsapp-float {
+    /* background-color: #fff; */
+    /* border-radius: 50%; */
+    padding: 10px 10px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    /* background-color: #25d366; */
+    position: fixed;
+    right: 10px; /* Right side se distance */
+    bottom: 100px; /* Bottom se distance */
+    z-index: 1000; /* Ensure it's above other elements */
+}
+
+.whatsapp-float img {
+    width: 80px; /* Icon size */
+    height: 80px;
+    background-color: #dc4535;
+    color: #fff;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease-in-out;
+}
+
+.whatsapp-float img:hover {
+    transform: scale(1.1);
+}
