--- a/css/media.css
+++ b/css/media.css
@@ -36,7 +36,7 @@
      #gallery h3 {
          font-size: 40px !important;
      }
-     .whatsapp-float {
+     /* .whatsapp-float {
         padding: 10px 10px;
         border-top-left-radius: 30px;
         border-bottom-left-radius: 30px;
@@ -47,14 +47,14 @@
     }
 
      .whatsapp-float img {
-        width: 60px; /* Icon size */
+        width: 60px; 
         height: 60px;
         background-color: #dc4535;
         color: #fff;
         border-radius: 50%;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
         transition: transform 0.3s ease-in-out;
-    }
+    } */
 }
 
 @media (max-width: 990px) {
