--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,7 @@
 }
 
 
-body{
-    position: relative;
-}
+
 
 .h3 {
     font-size: 24px;
@@ -638,21 +636,18 @@ address {
 }
 
 
-.whatsapp-float {
-    /* background-color: #fff; */
-    /* border-radius: 50%; */
+/* .whatsapp-float {
     padding: 10px 10px;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
-    /* background-color: #25d366; */
     position: fixed;
-    right: 10px; /* Right side se distance */
-    bottom: 100px; /* Bottom se distance */
-    z-index: 1000; /* Ensure it's above other elements */
-}
+    right: 10px; 
+    bottom: 100px; 
+    z-index: 1000; 
+} */
 
-.whatsapp-float img {
-    width: 80px; /* Icon size */
+/* .whatsapp-float img {
+    width: 80px; 
     height: 80px;
     background-color: #dc4535;
     color: #fff;
@@ -663,4 +658,4 @@ address {
 
 .whatsapp-float img:hover {
     transform: scale(1.1);
-}
+} */
